# Simple-OS

./: .gitignore  CMakeLists.txt  README.md  readme.txt
1_UART/: .gitignore  Makefile  kernel  kernel.img  kernel.lds  kernel_dump.s  namen.txt  start.S  uart.c  uart_driver.c  uart_driver.h
2_Interrupt/: start.S
backup/00_default_folder/: Makefile
backup/1_UART/: .gitignore  kernel.img  uart.c  uart_driver.c
backup/2_Interrupt/: Interrupt_Handler.c  namen.txt
backup/bs-logic/: start.S
backup/driver/: uart_driver.c
backup/include/: Interrupt_Handler.h
src/: Makefile  kernel.lds  kernel.lds.S  namen.txt  screenlog.0
src/bs-logic/: Boot.c  Interrupt_Handler.c  Interrupt_Handler_helper.S  Interrupt_Vector_Table.S  MMU.c  Stack.S  dataab_helper.S  f_dataab.S  inputtest.c  kernel.img  kernel_dump.s  kprintf.c  main.c  mode_reg_helper.S  process.c  start.S
src/bs-logic/threads/: init_thread.c  save_thread.S  threads_handler.c
src/driver/: MMU-helper.S  interrupt_regs_driver.c  syscall_helper.S  syscalls.S  syscalls.c  uart_driver.c
src/include/: Boot.h  Interrupt_Handler.h  Interrupt_Handler_helper.h  Interrupt_printer.h  MMU-helper.h  MMU.h  Rick.h  dataab_helper.h  f_dataab.h  init_thread.h  inputtest.h  interactive_test.h  interrupt_regs_driver.h  kprintf.h  mode_reg_helper.h  printf_lib.h  process.h  regcheck.h  syscall_helper.h  syscalls.h  systemfunctions.h  threads_handler.h  uart_driver.h  userthread.h
src/lib/: Interrupt_printer.c  Rick.c  interactive_test.c  kprintf.c  printf_lib.c  regcheck.c  systemfunctions.c  uart.c  userthread.c
src/syscalls/: syscalls.S  syscalls.h
src/user/: idle_thread.c  interactive_test.c  interactive_test_helper.S  uart_listen.c  uprintf.c
src/user/include/: idle_thread.h  interactive_test.h  interactive_test_helper.h  uart_listen.h  uprintf.h
src/user/syscalls/: syscalls.S  syscalls.h
